2013-03-12  Darshit Shah <darnir@gmail.com>

	* Makefile.am (EXTRA_DIST): Add Test--post-file.px.
	* run-px (tests): Likewise.
	* Test--post-file.px: New file.

2012-11-09  Tim Ruehsen  <tim.ruehsen@gmx.de>

	* HTTPServer.pm: added check for must-not-match request-header
	* Test-cookies.px: check cookie deletion and cookie domain matching

2012-06-16  Giuseppe Scrivano  <gscrivano@gnu.org>

	* Makefile.am (EXTRA_DIST): Add Test-stdouterr.px.
	* run-px (tests): Likewise.
	* Test-stdouterr.px: New file.

2011-06-03  Merinov Nikolay  <kim.roader@gmail.com>

	* Test-idn-cmd-utf8.px: Added test for idn with utf-8 local encoding.
	* Test-idn-robots-utf8.px: Added test for idn with utf-8 local encoding
	and robots.txt file.
	* Makefile.am, run-px: Add new tests.
2011-04-19  Giuseppe Scrivano  <gscrivano@gnu.org>

	* Makefile.am (LIBS): Add $(LIB_CLOCK_GETTIME).

2011-04-04  Giuseppe Scrivano  <gscrivano@gnu.org>

	* Makefile.am (LIBS): Remove  @LIBSSL@ @W32LIBS@

2010-10-23  Giuseppe Scrivano  <gscrivano@gnu.org>

	* Makefile.am (LIBS): Remove @LIBGNUTLS@ and use @W32LIBS@ as last
	component.

2010-09-12  Mike Frysinger  <vapier@gentoo.org>

	Fix some tests failures.
	* Test-iri-forced-remote.px: Use --trust-server-names to the cmdline
	variable.
	* Test-iri-list.px: Likewise.
	* Test-iri.px: Likewise.

2010-06-04  Giuseppe Scrivano  <gscrivano@gnu.org>

	* Test--no-content-disposition-trivial.px: Use /usr/bin/env to find the
	perl interpreter.
	* Test--no-content-disposition.px: Likewise.
	* Test--spider-fail.px: Likewise.
	* Test--spider-r--no-content-disposition-trivial.px: Likewise.
	* Test--spider-r--no-content-disposition.px: Likewise.
	* Test--spider-r-HTTP-Content-Disposition.px: Likewise.
	* Test--spider-r.px: Likewise.
	* Test--spider.px: Likewise.
	* Test-E-k-K.px: Likewise.
	* Test-E-k.px: Likewise.
	* Test-HTTP-Content-Disposition-1.px: Likewise.
	* Test-HTTP-Content-Disposition-2.px: Likewise.
	* Test-HTTP-Content-Disposition.px: Likewise.